<resources>
    <string name="facebook_app_id">2182911661809334</string>
    <string name="fb_login_protocol_scheme">fb2182911661809334</string>

    <string name="app_name">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Location</string>
    <string name="slide_1_desc">Kemudahan Dalam Menemukann Lokasi yang ingin anda tuju!</string>

    <string name="slide_2_title">Transportation</string>
    <string name="slide_2_desc">Perjalanan Jadi Mudah!</string>

    <string name="slide_3_title">Food</string>
    <string name="slide_3_desc">Cara Mudah Menemukan Restoran Kesayangan Anda!</string>

    <string name="slide_4_title">Welcome</string>
    <string name="slide_4_desc">Selamat Berpetualang Dan Temukan Pengalaman Tak Terlupakan!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="title_activity_register">Register</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_masukan_nomor_hp">masukkan_nomor_hp</string>
    <string name="title_buka_whatsapp">buka_whatsapp</string>
    <string name="title_bukawhatsApp">Buka Whatsapp</string>
    <string name="title_buka_w">Buka WhatsApp</string>
    <string name="login">login</string>
    <string name="cancel_login">cancel_login</string>
    <string name="error_login">error_login</string>
</resources>