<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".fragments.UserFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="213dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/firebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/Username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edt_password_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_register"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/bg_screen1"
        android:text="@string/title_activity_register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_register" />

    <Button
        android:id="@+id/whatsapp"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@color/bg_screen5"
        android:text="WhatsApp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        tools:ignore="MissingConstraints" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginButton"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp"
        facebook:com_facebook_login_text="Login with Facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>